# AuthFace

./: .gitignore  install.sh  readme.md  start.sh
auth-backend/: pyproject.toml
auth-backend/authBackend/: asgi.py  settings.py  urls.py  wsgi.py
auth-backend/vault/: models.py  opencv_module.py  serializers.py  urls.py  views.py
auth-backend/vault/migrations/: 0001_initial.py  0002_remove_biometria_sitio_biometria_user_and_more.py  0003_biometria_name.py  0004_alter_biometria_name.py
auth-extension/: package.json
auth-extension/src/: background.ts  popup.tsx
auth-extension/src/contents/: alttlisia-bridge.ts  alttlisia.ts  auth.ts  facebook.ts
auth-extension/src/styles/: poup.css
auth-frontend/: beforeware.py  layouts.py  main.py  pyproject.toml
auth-frontend/modules/auth/: login.py  register.py
auth-frontend/modules/dashboard/: dashboard.py
auth-frontend/modules/dashboard/components/: biometria.py  cuenta.py  home.py
auth-frontend/scripts/: camera.js
auth-frontend/static/models/: hola.json
auth-frontend/static/scripts/: biometria.js  camera.js  dashboard.js  home.js  login.js  register.js
auth-frontend/static/styles/: login.css
auth-frontend/styles/: dashboard.css  index.css  login.css
auth-frontend/styles/dashboard/: home.css
